--- a/main/main.vcxproj.filters
+++ b/main/main.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="TeachingAssistant.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Polymorphism.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h">
